--- a/Middleware/TP1/src/main/webapp/index.html
+++ b/Middleware/TP1/src/main/webapp/index.html
@@ -1,83 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Shmem</title>
-<style>
-  /* Centrer le formulaire */
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin-top: -100px
-  }
-  
-  /* Style du champ "carnet" */
-  input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    outline: none;
-  }
-
-  /* Style du champ "adresse" */
-  .adresse-input {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-
-  .adresse-input label {
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-
-  .adresse-input input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    outline: none;
-    margin-bottom: 5px;
-  }
-
-  .adresse-input input[type="text"]:last-child {
-    margin-bottom: 0;
-  }
-
-  /* Style du bouton "Envoyer" */
-  input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-
-  /* Hover du bouton "Envoyer" */
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
-</style>
-
+    <meta charset=\"UTF-8\">
+    <title>Carnet d'adresses</title>
+    <style>
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+    </style>
 </head>
+
 <body>
-
-<form action="index" method="post">
-
-<h3>Ajouter</h3>
-  <input type="text" name="carnet" required>
-  <br>
-  <input type="submit" value="Enregistrer"> 
-  
-  
-</form>
-
+    <form action=\"index\" method=\"post\">
+        <div>
+            <h3>Ajouter une adresse</h3>
+            <label>Choisir le carnet :</label>
+            <select name=\"crn\"></select>
+            <label for=\"nom\">Nom :</label>
+            <input type=\"text\" id=\"nom\" name=\"nom\" required>
+            <label for=\"rue\">Rue :</label>
+            <input type=\"text\" id=\"rue\" name=\"rue\" required>
+            <label for=\"ville\">Ville :</label>
+            <input type=\"text\" id=\"ville\" name=\"ville\" required>
+            <br>
+            <input type=\"submit\" value=\"Enregistrer\">
+        </div>
+    </form>
 </body>
+
 </html>
